style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 26px;
  font-weight: bold;
  margin: 0 10px 10px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: bold;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;
}

main img {
  width: 100%;
}

/* ---  Groups & Items --- */

.group {
  display: flex;
  flex-direction: column;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
}

/* -------  Navigation ------- */

header {
  background-color: #ff385c;
  padding: 20px 20px 0 20px;
  text-align: center;
}

header nav {
  display: flex;
  justify-content: center;
}

.logo {
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
}

header nav ul {
  display: flex;
  list-style-type: none;
}


header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li:last-child a {
  margin-right: 0px;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}

/* -------  Search Form ------- */
form {
  border: 2px solid #ff385c;
  padding: 10px;
}

form label {
  font-weight: bold;
}

form select,
form input {
  margin-bottom: 20px;
  width: 180px;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
}

.form-space {
  display: flex;
  justify-content: space-between;
}



/* -------  Footer ------- */

footer {
  background-color: #ff385c;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */
@media all and (min-width: 480px) {
  header {
    display: flex;
    justify-content:space-between;
    align-items: center;
    padding-top: 5px;
  }

  form {
    display: flex;
    justify-content: space-around;
  }

  form input {
    display: flex;
    flex-wrap: wrap;
  }

  form select,
  form input {
    margin-bottom: 0;
    width:80%;
  }
  
  .form-space {
    display: flex;
    flex-wrap: wrap;
    row-gap: normal;
    align-self:center;
  }

  .group {
    display:flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }

  .item {
    flex: 1;
    margin: 10px;
  }

  .item-double{
    flex: 2;
    align-self:center;
    margin: 10px;
  }

}

